# egi

./: .gitignore  ARCHITECTURE_AND_HISTORY.txt  SYSTEM.md  gradlew  settings.gradle
.github/workflows/: android.yml  keep_alive.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/egi/: AppPicker.kt  AppSelectorScreen.kt  BootReceiver.kt  CommonUi.kt  DnsPicker.kt  EgiNetwork.kt  EgiPreferences.kt  EgiVpnService.kt  GameServers.kt  MainActivity.kt  PackageUtils.kt  PacketUtils.kt  RouterAdminScreen.kt  SecurityUtils.kt  TrafficEvent.kt  WifiAnalyzer.kt  WifiReceiver.kt  WifiScanScreen.kt  WifiUtils.kt
app/src/main/java/com/example/igy/: AppPicker.kt  AppSelectorScreen.kt  AutoStartPicker.kt  AutoTriggerService.kt  BootReceiver.kt  CommonUi.kt  DnsPicker.kt  IgyNetwork.kt  IgyPreferences.kt  IgyVpnService.kt  MainActivity.kt  PackageUtils.kt  RouterAdminScreen.kt  SecurityUtils.kt  TrafficEvent.kt  WifiReceiver.kt  WifiScanScreen.kt  WifiUtils.kt
app/src/main/res/drawable/: ic_dog_status.xml  ic_shield_status.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/rust/: Cargo.toml
app/src/main/rust/src/: common.rs  lib.rs  scanner.rs  stats.rs  tests.rs  vpn.rs
app/src/test/java/com/example/egi/: SecurityUtilsTest.kt
app/src/test/java/com/example/igy/: SecurityUtilsTest.kt
server/: package-lock.json  package.json
server/public/: admin.html
server/src/: auth.ts  index.ts  models.ts  vpn.ts
