[package]
name = "igy_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.31"
jni = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
libc = "0.2"
shadowsocks = { version = "1.24", default-features = false, features = ["aead-cipher-2022"] }
shadowsocks-service = { version = "1.24", features = ["local"] }
tun2proxy = "0.6"
tun = { version = "0.7", features = ["async"] }
base64 = "0.21"
lazy_static = "1.4"
zeroize = { version = "1.7", features = ["derive"] }
etherparse = "0.14"
